css/custom.css
/****** PLACE YOUR CUSTOM STYLES HERE ******/

body, html {
    margin-bottom: 0;
    margin-top: 0;
    padding-bottom: 0;
    padding-top: 0;
}

/**** Anchors ****/

section a:hover {
    color: #13313E;
    text-decoration: underline;
    transition: all 0.3s ease;
}

section.section {
    padding-left: 40px;
    padding-right: 40px
}

.mw600 {
    max-width: 600px;
}

footer.bg-dark span,
footer.bg-dark span a {
    color: #FFE082;
}

.bg-primary a:hover,
.bg-dark a:hover,
footer.bg-dark span a:hover {
    color: #FFE082;
    opacity: 1;
    text-decoration: underline;
}

.bg-dark .social-list a, 
.image-bg .social-list a {
    opacity: .8;
    color: #FFE082;
}

.bg-dark .social-list a:hover, 
.image-bg .social-list a:hover {
    color: #FFE082;
    opacity: 1;
}

.bg-primary a.btn-gold,
.bg-dark .back-to-top {
    color: #FFE082;
    border-color: #FFE082;
}

.bg-primary a.btn-gold:hover,
.bg-dark .back-to-top:hover {
    background: #FFE082;
}

.bg-dark .back-to-top:hover,
.bg-primary .btn:hover {
    color: #13313E;
    text-decoration: none;
}

input[type="submit"],
button[type="submit"] {
    border: 2px solid #27627D;
    background: #13313E;
}

.overlay:before {
    opacity: 0.6;
}

.home > .overlay:before {
    background: rgba(19,49,62, 0.7 ) 0%; 
    opacity: 1;
}

.bg-primary .list-inline i {
    color: #fff;
}

section.cover .list-inline > li {
    padding: 0 16px;
}

.logo {
    height: 75px;
}
 
.controls-inside .flex-control-nav {
    bottom: -50px;
}

.italic {
    font-style: italic;
}

section ul.lead {
    list-style-position: outside;
}

div.lead li,
div.lead p,
ul.lead li,
ol.lead > li {
    font-size: 16px;
    font-weight: 400;
    line-height: 32px;
    padding: 4px 0;
}

ol.lead > li {
    font-weight: 600;
}

ol.marker {
    list-style: none;
    counter-reset: num;
    padding-left: 60px;
}

ol.marker li {
    counter-increment: num;
}

ol.marker li:before {
    content: counter(num) "";
    color: white;
    font-weight: bold;
    padding: 6px 16px;
    background-color: #0F6D7D;
    border-radius: 100%;
    text-align: center;
    margin-right: 16px;
    margin-left: -60px;
    display: inline-flex;
    list-style-position: outside;
}

.image-caption .caption:before {
    background: none;
}

.image-caption .caption {
    text-align: center;
}

.t15 {
    top: 15px;
}

blockquote.small {
    color: #595959;
    font-size: 1.15em; 
    line-height: 2em;
    padding: 15px;
}

blockquote {
    color: #595959;
}

.bg-secondary blockquote {
    border-color: #27627D;
}

.button-tabs .active .tab-title {
    background: #27627D;
}

.text-tabs .tab-title span, 
.button-tabs .tab-title span {
    text-transform: capitalize;
    font-size: 10px;
}

.button-tabs .active .tab-title:hover {
  background:#27627D;
}

.finding-icon {
    max-height: 40px; 
    padding: 0;
}

.bg-dark .icon {
    color: #FFE082;
}

input[type="email"] {
    background: #f5f5f5;
    border: none;
    width: 100%;
    height: 50px;
    padding-left: 20px;
    font-weight: 500;
    margin-bottom: 24px;
    border-radius: 0;
}

input[type="email"]:focus {
    outline: 1px solid #ccc;
}

/*** Fonts ***/

section.cover div ul li a i {
    font-size: 2rem;
}

section.cover h1, 
section.cover h2 {
    font-family: 'Helvetica Neue','Roboto','Raleway', 'Helvetica', 'Arial', sans-serif;
}
 
section.cover h2 {
    font-weight: 200;
}

.font-size-32 {
    font-size: 32px;
    line-height: 40px;
}

.font-size-24 {
    font-size: 24px;
    line-height: 32px;
}

.font-size-18 {
    font-size: 18px; 
    line-height: 26px;
}

.font-size-14 {
    font-size: 14px; 
    line-height: 22px; 
}

.font-size-16 {
    font-size: 16px; 
    line-height: 24px; 
}

.font-size-12 {
    font-size: 12px;
    line-height: 24px;
}

div .lttr-spacing-2 {
    letter-spacing: 2px;    
}

.main-content {
    float: right;
}

/**** Navigation ****/

.menu > li ul,
ul.menu li button {
    background: #13313E;
}

.menu li a,
ul.menu li p {
    text-transform: none;
}

ul.menu > li a:hover {
    color: #FFE082;
    text-decoration: underline;
}

ul.menu li p,
ul.menu li button {
    font-size: 11px;
    font-weight: 600;
    letter-spacing: 1px;
    color: #fff;
    margin: 0;
    transition: all 0.3s ease;
    max-width: 100%;
    white-space: normal;
}

ul.menu li button.btn {
    text-transform: capitalize;
}

ul.menu li button.btn-primary {
    background-color: none;
    border: none;
}

ul.menu li button.btn-primary:hover {
    color: #13313E;
    background-color: #FFE082;
}

nav.bg-dark ul.menu li p {
    color: #fff;
    opacity: .7;
}

nav.transparent.fixed ul.menu li p {
    color: #292929;
    opacity: .5;
}

nav.sidebar {
    display: block;
    overflow-y: auto;
    padding: 0;
    background-color: #fff;
    float: left;
    transition: max-height 0.3s ease-in-out;
    z-index: 100;
}

ul.nav.nav-pills element {
    padding-top: 0;
}

nav.sidebar .nav li a {
    color: #292929;
    opacity: .8;
    font-size: 11px;
    font-weight: 400;
    letter-spacing: 1px;
    border-radius: 0;
    position: relative;
    display: block;
    padding: 8px 16px;
    line-height: 1.5;
}

nav.sidebar .nav > li.active a, 
nav.sidebar .nav > li a:hover,
nav.sidebar .nav > li a:focus {
    background-color: #f8f8f8;
    color: #13313E;
    opacity: 1;
    font-weight: 600;
    transition: cubic-bezier(-0.03, 0.82, 0.165, 1);
}


ul.menu > li a:focus,
.sidebar .nav li a:focus {
    outline: thin dotted;
    outline-color: inherit;
    outline-offset: -1px;
}

.nav {
    padding-top: 72px;
}

.nav li {
    display: block;
    width: 100%;
}


.sidebar li i {
    margin: 4px;
}

/* Add animation for zoom effect */
@keyframes zoomIn {
from {
    transform: scale(0.8);
    }
    to {
    transform: scale(1);
    }
}

.image-container {
  text-align: center;
  margin-top: 16px;
}

figcaption {
  margin: 12px 0 34px 4px;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  border: 0;
}

footer {
    height: 260px;
    z-index: 100;
}


/************ max-width: 990px ************/

@media (max-width: 990px) {
    .menu > li > ul {
        background: #f5f5f5;
    }
    
    .menu > li > ul li a {
        color: #292929;
        opacity: 0.75;
    }
    
    .menu > li > ul li a:hover {
        color: #292929;
        text-decoration: underline;
    }
    
    .text-center-sm {
        text-align: center;
    }
    
    .txt-sm-48 {
        font-size: 48px;
    }
    
    .txt-sm-24 {
        font-size: 24px;
    }
    
    .main-content {
        width: 100%;
        padding: 0;
    }
    
    nav.sidebar, nav#navbar-example::before {
        display: none;        
    }    
    
    .fulloverlay:before {
        background: conic-gradient(from 151deg at 81.98% 109.91%, var(--ocean-900, #002C33) 158.43133807182312deg, var(--ocean-600, #006A7A) 360deg);
        opacity: 1;
    } 
   
}

/************ max-width: 767px ************/

@media (max-width: 767px) {
    section {
        padding: 60px 20px;
    }
    
    div.container {
        padding: 0;
    }
    
    p.lead, ol.lead > li > p {
        font-size: 16px;
        line-height: 24px;
    }
    
    h4 {
        font-size: 20px;
    }  
    
    a.btn.btn-lg {
        width: 100%;
        height: auto;
        line-height: 2;
        white-space: wrap;
        padding: 8px;
    }
    
    ul.menu li p {
        color: #292929;
    }
}

/* Clickable Image */

.clickable-image {
    width: 100%; /* Adjust size as needed */
    cursor: pointer;
    border-radius: 5px;
    transition: transform 0.2s ease-in-out;
}

.clickable-image:hover {
    transform: scale(1.05);
}

/* Modal Styles */
.image-modal {
    display: none;
    position: fixed;
    z-index: 1000;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    justify-content: center;
    align-items: center;
    overflow: auto;
}

/* Modal Content */
.modal-content {
    position: relative;
    padding: 10px;
    border-radius: 8px;
    max-width: 90%;
    max-height: 90%;
    text-align: center;
}

.img-modal {
    background: none;
    border: none;
    box-shadow: none;
}

#modal-image {
    width: 90%;
    max-width: 900px; /* Adjust as needed */
    height: auto;
    border-radius: 5px;
}

h2#modal-title {
    color: white;
}

/* Close Button */
button.close {
    position: absolute;
    top: 1rem;
    right: 3rem;
    font-size: 50px;
    color: white;
    font-weight: 100;
    opacity: 1;
}

button.close:hover {
    color: #eee;
}

/* Screen reader-only text */
.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    border: 0;
}

